# AAU-SpaceRob-AutoDrone

./: .gitignore  .~lock.thrust_log.csv#  10sec_data.csv  10sec_data_Vicon_reguleret.csv  ArUco_marker_diff.csv  Camera_node.py  Camera_node_V2.py  Camera_node_V3.py  Camera_node_V4.py  Clean_img_T265.py  Data_from_T265.py  Data_from_T265_transformation.py  Data_from_T265_transformation_V2.py  Detect_ArUco_with_T265.py  Fisheye_img_T265.py  Generate_ArUco_marker.py  Get_pose_of_marker.py  Pose_maker_and_T_265.py  Pose_maker_and_T_265_V2.py  Pose_maker_and_T_265_V3.py  Pose_of_marker_V3.py  Position_of_marker_V1.py  Position_of_marker_V2.py  Position_of_marker_V3.py  README.md  T265_NEW___.py  T265_V5_test.py  T265_V6.py  T_265_V4.py  T_265_V5.py  Test_fil.py  Test_test.py  YawAlignmentTest  log_file.txt  pose_of_marker_V2.py  rollpitchyawtest.py  taranis_output.py  thrust_log.csv  thrust_log_pc.csv  thrust_log_received.csv  (+1 more)
Calibrate_camera/: camera_calibration.py  data_generation.py  gem_billeder.py
Calibrate_camera_2/: Calibrate_camera_2.py  Creat_board.py  NEW_calibration_of_ChArUco_board.py  NEW_position_ArUco_marker.py  NEW_position_of_ChArUco_board_live.py  NEW_position_of_ChArUco_board_single_img.py  Position_of_ChArUco_board_V5_old_version.py  Take_photo_and_save.py  calib_4.npz
Calibrate_camera_2/For_old_version/: Position_of_marker_V4_old_version.py  Test_af_calibration.py
Control/: control_algorithm.cpp  waypoints copy.csv  waypoints.csv
Drone/: Drone.py  FCController.py  ModeAndArm-confirmation.py  PlanTraject.py  ReadAllParam.py  ReadAttitudeAndAccParam.py  ReadAttitudeParam.py  Stabilize-arm-motor_test.py  USBConnect.py  VicionXYZGlobalPos.py  ViconTest.py  s.py  test  test2
Drone/Try/: Server.py  Try.py
Old_files/: manual_control.py  manual_control_xbox.py  manual_control_xbox_wireless.py
ROS_Drone/: README.md
ROS_Drone/src/px4_ros_com/: CMakeLists.txt
ROS_Drone/src/px4_ros_com/launch/: battery_listener.launch.py
ROS_Drone/src/px4_ros_com/src/quadcopter/: battery_listener.cpp
TEST_w_Vicon/: 1_ArUco_w_T265_intrinsics.py  2_ArUco_own_calib.py  3_ArUco_own_calib_undist.py  NEW_ArUco_resultat_behandling.py  T_Vicon_FCvicon.py  Test_data_NEW.txt  Undist_img.py  _Fix_af_ArUco_test.py
TEST_w_Vicon/Resultatbehandling _Pose/: Databehandling_uden_vicon.py  Test_1Hz_Viconregulering.py  V2_Test_1Hz_Viconregulering.py  plot_data_from_csv.py
Test/Test2 Hover/: Hover_test_1_3 (1).csv
Test/Test3 Trajectory/: Task_test_trajectory.py  trajtest.py
Test/Test3 Trajectory/Trajectory test data/: Trajectory_data_1.csv  Trajectory_data_2.csv  Trajectory_data_3.csv  Trajectory_data_4.csv  Trajectory_data_5.csv  Trajectory_data_6.csv  Trajectory_data_7.csv  Trajectory_data_results.csv
Test/Test4 Pose est/: orientationHisto.py  poseesthisto.py
Test/Test4 Pose est/Data/: 10sec_data.csv  10sec_data_Vicon_reguleret.csv  camera_data_diskret_1.csv  camera_data_diskret_3.csv  camera_data_diskret_6.csv  camera_data_diskret_7.csv  camera_data_diskret_8.csv  camera_data_uden_vicon_1.csv  camera_data_uden_vicon_2.csv  camera_data_uden_vicon_6.csv
Test/Test5 ArucoTest/: Arucotest.py
Test_Log/: Log_YAW_200.txt  Log_Yaw_300.txt
_Calibrate_camera_2/: Creat_board.py  NEW_calibration_of_ChArUco_board.py  NEW_position_ArUco_marker.py  NEW_position_of_ChArUco_board_live.py  NEW_position_of_ChArUco_board_single_img.py  Take_photo_and_save.py  calib_1.npz  calib_2.npz  calib_5.npz  calib_new_1.npz
drone/: CMakeLists.txt  package.xml
drone/install/: local_setup.sh  setup.sh
drone/install/drone/share/drone/: package.bash  package.zsh
drone/launch/: GUI_launch.py  control_launch.py  fc_cmd_launch.py  gui_launch.py
drone/log/: latest_build
drone/msg/: DroneCommand.msg  DroneCommandAutonomous.msg  DroneCommandManual.msg  DroneControlData.msg  DroneStatus.msg  DroneVideo.msg  README.MD  ViconData.msg
drone/scripts/: Fc_command2.py  GCS.py  GUI.py  GUIpubtest.py  Manual_control_xbox.py  README.md  camera.py  clock.py  emulateViconData.py  fc_cmd.py  fc_cmd_test.py  fc_command_listen.py  image_listen.py  image_publish.py  manual_cmd.py  manual_contro_joystickk.py  manual_control.py  manual_control_joystick.py  manual_control_xbox.py  manual_listen.py  tes.py  time.py  viconData.py  waypoints.csv
drone/src/: Altitude_controller.cpp  Controller_node.cpp  XY_controller.cpp  controller.cpp  controller_2.c  controller_2.cpp  controller_camera.cpp  controller_hover_test.cpp  controller_task_test.cpp  controller_trajectory_test.cpp  controller_vicon.cpp  controller_yaw.cpp  drone_control_node.cpp  test_new.cpp  timer_test.cpp
drone/srv/: Clock.srv
fuck/: ClientVicon.py  client.py  clientTest.py  server.py  serverVicon.py
install/: local_setup.sh  setup.sh
install/drone/lib/drone/: cpp_executable  fc_command.py
install/drone/share/drone/: package.dsv  package.ps1  package.sh
log/: latest_build
test4/: camera_data_diskret_10.csv  camera_data_diskret_2.csv  camera_data_diskret_4.csv  camera_data_diskret_5.csv  camera_data_diskret_9.csv  camera_data_uden_vicon_3.csv
vicon_dssdk/: CoreClient.py  CoreClient3.py  ViconDataStream.py  _CoreClient.pyd  _CoreClient3.pyd
vicon_dssdk-1.11.0.dist-info/: METADATA  RECORD  top_level.txt
